# Custom-Kubernetes-Scheduler

./: CMakeLists.txt  CONTRIBUTING.md  Dockerfile  README.md
deploy/: rbac.yaml  scheduler-deployment.yaml
src/: http_client.cpp  http_client.hpp  k8s_client.cpp  k8s_client.hpp  k8s_types.hpp  main.cpp  scheduler.cpp  scheduler.hpp
